fix scrollbar in darkmode for windows

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1117,14 +1117,14 @@ table td {
   color: rgb(0 204 153 / var(--tw-text-opacity));
 }
 
-.text-secondary {
-  --tw-text-opacity: 1;
-  color: rgb(0 128 96 / var(--tw-text-opacity));
-}
-
 .text-default {
   --tw-text-opacity: 1;
   color: rgb(1 27 26 / var(--tw-text-opacity));
+}
+
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(0 128 96 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1179,33 +1179,40 @@ table td {
 
 /* scrollbar */
 
-::-webkit-scrollbar {
+.window-scrollbar *::-webkit-scrollbar {
   width: 1em;
 }
 
-::-webkit-scrollbar-track {
+.window-scrollbar *::-webkit-scrollbar-track {
   --tw-border-opacity: 1;
   border-color: rgb(0 128 96 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
   background-color: rgb(254 255 254 / var(--tw-bg-opacity));
 }
 
-:is(.dark )::-webkit-scrollbar-track {
+:is(.dark .window-scrollbar *)::-webkit-scrollbar-track {
+  --tw-border-opacity: 1;
+  border-color: rgb(70 211 202 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
   background-color: rgb(1 27 26 / var(--tw-bg-opacity));
 }
 
-::-webkit-scrollbar-track {
+.window-scrollbar *::-webkit-scrollbar-track {
   border-left-width: 1px;
   border-left-style: solid;
 }
 
-::-webkit-scrollbar-thumb {
+.window-scrollbar *::-webkit-scrollbar-thumb {
   --tw-bg-opacity: 1;
   background-color: rgb(0 128 96 / var(--tw-bg-opacity));
 }
 
-::-webkit-scrollbar-thumb:hover {
+:is(.dark .window-scrollbar *)::-webkit-scrollbar-thumb {
+  --tw-bg-opacity: 1;
+  background-color: rgb(70 211 202 / var(--tw-bg-opacity));
+}
+
+.window-scrollbar *::-webkit-scrollbar-thumb:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 204 153 / var(--tw-bg-opacity));
 }
@@ -1233,6 +1240,11 @@ table td {
   fill: rgb(0 204 153 / 0.3);
 }
 
+:is(.dark .dark\:border-secondary-dark) {
+  --tw-border-opacity: 1;
+  border-color: rgb(70 211 202 / var(--tw-border-opacity));
+}
+
 :is(.dark .dark\:bg-default) {
   --tw-bg-opacity: 1;
   background-color: rgb(1 27 26 / var(--tw-bg-opacity));
@@ -1241,6 +1253,11 @@ table td {
 :is(.dark .dark\:text-bg) {
   --tw-text-opacity: 1;
   color: rgb(254 255 254 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-secondary-dark) {
+  --tw-text-opacity: 1;
+  color: rgb(70 211 202 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
